--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p> sharan school name = "AHSS"</p>
 
     <p> Contact : 98947274274</p>
+
+    <p> college : Hindustan institue of technology</p>
 </body>
 </html>
