--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <title////////sharan autobiography/////</title>
     <p> sharan school name = "AHSS"</p>
 
     <p> Contact : 98947274274</p>
